feat: use backend API to check for username availabilty (#44)
* feat: consume /api/account from Nostria Backend

Added ng-openapi-gen lib to generate typesafe service from /openapi.json hosted by backend.

For now it is just account.service.ts (with /api/account endpoints)

* feat: use backend API to check for username availabilty

Calling `GET /api/account/:pubkeyOrUsername` on username input debounced.
404 means available (gotta change that to cover the case when backend is down),
200 means not available (there is an account)

* address code review issue

* add unsubscription code

--- a/src/app/pages/premium/upgrade/upgrade.component.html
+++ b/src/app/pages/premium/upgrade/upgrade.component.html
@@ -29,7 +29,7 @@
       <form [formGroup]="usernameFormGroup">
         <mat-form-field appearance="outline" class="full-width">
           <mat-label>Username</mat-label>
-          <input matInput formControlName="username" placeholder="Choose a username" (input)="checkUsernameAvailability()"
+          <input matInput formControlName="username" placeholder="Choose a username"
             autocomplete="off">
             <mat-icon matPrefix>alternate_email</mat-icon>
             @if (isCheckingUsername()) {
